second fix to the images not showing

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -172,7 +172,7 @@ li a {
   position: relative;
 }
 .pro1 {
-  background: url("pro.png");
+  background: url("https://github.com/Easyblend/PORTFOLIO/blob/main/portfolio/Pro.png?raw=true");
   background-position: center center;
   background-size: cover;
 }
